@@ -1,1 +1,0 @@
-libc = libc1
